og:tag - website url fixed

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
     />
     <meta
       property="og:image"
-      content="https://yourwebsite.com/images/og-img.png"
+      content="https://dev-suz.github.io/images/og-img.png"
     />
-    <meta property="og:url" content="https://yourwebsite.com" />
-    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://dev-suz.github.io" />
+    <meta property="og:type" content="website" />
     <link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
