--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     ></script>
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/typeit@8.8.7/dist/index.umd.js"></script>
+    <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
   </head>
   <body>
     <header class="header">
@@ -334,7 +335,13 @@
         <h2 class="section__title">Contact</h2>
 
         <div class="contact__container container">
-          <form id="contactForm" class="contact__form">
+          <form
+            id="contactForm"
+            name="contactForm"
+            class="contact__form"
+            action="/test"
+            method="post"
+          >
             <input
               class="contact__input"
               type="text"
@@ -358,7 +365,7 @@
               placeholder="내용"
               required
             ></textarea>
-            <button class="contact__button button font-inherit">보내기</button>
+            <button id="contact-button" class="contact__button button font-inherit">보내기</button>
           </form>
         </div>
       </section>
